@@ -12,6 +12,8 @@
 
 2006-05-05  Alex Roitman  <shura@gramps-project.org>
 	* src/DisplayTabs/_MediaBackRefList.py: Import model.
+	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Add nickname
+	upgrade.
 
 2006-05-05  Don Allingham  <don@gramps-project.org>
 	* src/ViewManager.py: Add undo history menu entry
